--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1>Module 4 Assignment</h1>
-  <p>open console to see the output</p>
+  <p>open console to view output!!</p>
 </body>
 </html>
